@@ -96,6 +96,7 @@
         Reformatted the arguments.py file to be easier to read
     Implemented an 'actions' file for the arguments to call directly!
     Updated README badges to include links to build utilities and display more useful stuff
+    Made the error recognition system better when calling 'cyther.tools.call'
     TODO (not yet done)
     Implemented a 'makefile' system. This is not the primary method of compilation.
         Instead of directly calling commands, it will make a 'makefile', for later modification if desired
